[package]
name = "lazy-foo"
version = "0.1.0"
authors = ["Ysgard <ysgard@gmail.com>"]

[[bin]]
name = "lesson01"
path = "lesson01/main.rs"

[[bin]]
name = "lesson02"
path = "lesson02/main.rs"

[[bin]]
name = "lesson03"
path = "lesson03/main.rs"

[[bin]]
name = "lesson04"
path = "lesson04/main.rs"

[[bin]]
name = "lesson05"
path = "lesson05/main.rs"

[dependencies]
sdl2 = "*"
sdl2_image = "*"
