[package]
name = "lazy-foo"
version = "0.1.0"
authors = ["Ysgard <ysgard@gmail.com>"]

[[bin]]
name = "lesson01"
path = "lesson01/main.rs"

[[bin]]
name = "lesson02"
path = "lesson02/main.rs"

[[bin]]
name = "lesson03"
path = "lesson03/main.rs"

[[bin]]
name = "lesson04"
path = "lesson04/main.rs"

[[bin]]
name = "lesson05"
path = "lesson05/main.rs"

[[bin]]
name = "lesson06"
path = "lesson06/main.rs"

[[bin]]
name = "lesson07"
path = "lesson07/main.rs"

[[bin]]
name = "lesson08"
path = "lesson08/main.rs"

[[bin]]
name = "lesson09"
path = "lesson09/main.rs"

[[bin]]
name = "lesson10"
path = "lesson10/main.rs"

[[bin]]
name = "lesson11"
path = "lesson11/main.rs"

[[bin]]
name = "lesson12"
path = "lesson12/main.rs"

[dependencies]
sdl2 = "*"
sdl2_image = "*"
sdl2_ttf = "*"
