[package]
name = "lazy-foo"
version = "0.1.0"
authors = ["Ysgard <ysgard@gmail.com>"]

[[bin]]
name = "lesson01"
path = "lesson01/main.rs"

[[bin]]
name = "lesson02"
path = "lesson02/main.rs"

[[bin]]
name = "lesson03"
path = "lesson03/main.rs"

[[bin]]
name = "lesson04"
path = "lesson04/main.rs"

[[bin]]
name = "lesson05"
path = "lesson05/main.rs"

[[bin]]
name = "lesson06"
path = "lesson06/main.rs"

[[bin]]
name = "lesson07"
path = "lesson07/main.rs"

[[bin]]
name = "lesson08"
path = "lesson08/main.rs"

[[bin]]
name = "lesson09"
path = "lesson09/main.rs"

[[bin]]
name = "lesson10"
path = "lesson10/main.rs"

[[bin]]
name = "lesson11"
path = "lesson11/main.rs"

[[bin]]
name = "lesson12"
path = "lesson12/main.rs"

[[bin]]
name = "lesson13"
path = "lesson13/main.rs"

[[bin]]
name = "lesson14"
path = "lesson14/main.rs"

[[bin]]
name = "lesson15"
path = "lesson15/main.rs"

[[bin]]
name = "lesson16"
path = "lesson16/main.rs"

[dependencies]
sdl2 = ">= 0.25.0"
sdl2_image = ">= 0.25.0"
sdl2_ttf = ">= 0.25.1"
